make about us settings

--- a/blog-details-without-sidebar.html
+++ b/blog-details-without-sidebar.html
@@ -40,11 +40,8 @@
                                 <li class="current"><a href="index.html#tm-area-heroslider">الرئيسية</a></li>
                                 <li><a href="index.html#tm-area-features">خصائص التطبيق</a></li>
                                 <li><a href="index.html#tm-area-screenshots">صور التطبيق</a></li>
-                                <li><a href="index.html#tm-area-team">فريق العمل</a></li>
                                 <li><a href="index.html#tm-area-pricing">خطط الأسعار</a></li>
-                                <li><a href="index.html#tm-area-blog">أخر اخبارنا</a>
-
-                                </li>
+                                <li><a href="about-us.html">عن التطبيق</a></li>
                                 <li><a href="index.html#tm-area-contact">اتصل بنا</a></li>
                             </ul>
                         </nav>
@@ -193,8 +190,10 @@
                                 <h5 class="widget-title">الدعم</h5>
                                 <ul>
                                     <li><a href="index.html#tm-area-contact">اتصل بنا</a></li>
+                                    <li><a href="about-us.html">عن التطبيق</a></li>
+                                    <li><a href="terms.html">الشروط والاحكام</a></li>
+                                    <li><a href="privacy.html">سياسة الخصوصية</a></li>
                                     <li><a href="index.html#tm-area-faq">الأسئلة الشائعة</a></li>
-                                   
                                 </ul>
                             </div>
                         </div>
