--- a/index.html
+++ b/index.html
@@ -1051,23 +1051,24 @@
                 <span class="tm-sectiontitle-divider"><i class="zmdi zmdi-fullscreen"></i></span>
             </div>
         </div>
-        <div id="error-div" class="blogitem-commentbox mt-30 t-r rtl" style="color: red;">
-        <div id="success-div" class="blogitem-commentbox mt-30 t-r rtl" style="color: green;">
+
         <div class="row">
             <div class="col-lg-8">
+                <div id="error-div" class="blogitem-commentbox mt-30 t-r rtl" style="color: red;">
+                    <div id="success-div" class="blogitem-commentbox mt-30 t-r rtl" style="color: green;">
                 <form id="contactform" action="assets/php/mailer.php" method="post"
                       class="tm-form tm-contact-form">
                     <div class="tm-form-inner">
                         <div class="tm-form-field tm-form-fieldhalf">
-                            <input type="text" name="name" placeholder="الأسم بالكامل" required="required">
+                            <input type="text" name="name" placeholder="الأسم بالكامل" required>
                             <span class="tm-form-animatedline"></span>
                         </div>
                         <div class="tm-form-field tm-form-fieldhalf">
-                            <input type="email" name="email" placeholder="البريد الإلكتروني" required="required">
+                            <input type="email" name="email" placeholder="البريد الإلكتروني" required>
                             <span class="tm-form-animatedline"></span>
                         </div>
                         <div class="tm-form-field tm-form-fieldhalf">
-                            <input type="text" name="subject" placeholder="الموضوع" required="required">
+                            <input type="text" name="subject" placeholder="الموضوع" required>
                             <span class="tm-form-animatedline"></span>
                         </div>
                         <div class="tm-form-field tm-form-fieldhalf">
@@ -1075,7 +1076,7 @@
                             <span class="tm-form-animatedline"></span>
                         </div>
                         <div class="tm-form-field">
-                            <textarea name="message" cols="30" rows="4" placeholder="نص الرسالة"></textarea>
+                            <textarea name="message" required cols="30" rows="4" placeholder="نص الرسالة"></textarea>
                             <span class="tm-form-animatedline"></span>
                         </div>
                         <div class="tm-form-field">
@@ -1255,9 +1256,9 @@
                     $('#name_error').empty();
                 },
                 success: function (data) {
-                    $("#success-div").html('')
-                    $("#error-div").html('')
-                    $("#success-div").append('<li>' + 'تم الارسال بنجاح' + '</li>')
+                    $("#success-div").html('');
+                    $("#error-div").html('');
+                    $("#success-div").append('تم الارسال بنجاح');
                     $("#contactform").trigger('reset');
                 },
                 error: function (data_error, exception) {
