--- a/index.html
+++ b/index.html
@@ -1051,11 +1051,10 @@
                 <span class="tm-sectiontitle-divider"><i class="zmdi zmdi-fullscreen"></i></span>
             </div>
         </div>
-
+        <div id="error-div" class="blogitem-commentbox mt-30 t-r rtl" style="color: red;"></div>
+        <div id="success-div" class="blogitem-commentbox mt-30 t-r rtl" style="color: green;"></div>
         <div class="row">
             <div class="col-lg-8">
-                <div id="error-div" class="blogitem-commentbox mt-30 t-r rtl" style="color: red;"></div>
-                <div id="success-div" class="blogitem-commentbox mt-30 t-r rtl" style="color: green;"></div>
                 <form id="contactform" action="assets/php/mailer.php" method="post"
                       class="tm-form tm-contact-form">
                     <div class="tm-form-inner">
@@ -1258,8 +1257,8 @@
                     $('#name_error').empty();
                 },
                 success: function (data) {
-                    // $("#success-div").html('');
-                    // $("#error-div").html('');
+                    $("#success-div").html('');
+                    $("#error-div").html('');
                     $("#success-div").append('تم الارسال بنجاح');
                     $("#contactform").trigger('reset');
                 },
