--- a/index.html
+++ b/index.html
@@ -1051,8 +1051,9 @@
                 <span class="tm-sectiontitle-divider"><i class="zmdi zmdi-fullscreen"></i></span>
             </div>
         </div>
-        <div id="error-div" class="blogitem-commentbox mt-30 t-r rtl" style="color: red;"></div>
-        <div id="success-div" class="blogitem-commentbox mt-30 t-r rtl" style="color: green;"></div>
+        <div id="error-div" class="blogitem-commentbox mt-30 t-r rtl row" style="color: red;"></div>
+        <div id="success-div" class="blogitem-commentbox mt-30 t-r rtl row" style="color: green;"></div>
+        <br>
         <div class="row">
             <div class="col-lg-8">
                 <form id="contactform" action="assets/php/mailer.php" method="post"
